--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sebastian Duchene - Resaerch site
-email: sduchene@pasteur.fr and sduchene@unimelb.edu.au
+title: Sebastian Duchene - Research site
+email: sduchene@unimelb.edu.au
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
