--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,11 +30,15 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: minima
+theme: jekyll-themes-slate #minima
+#remote_theme: pages-themes/slate@v0.2.0
+#plugins:
+#  - jekyll-remote-theme
+#  - jekyll-feed
+
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
-  - jekyll-feed
-  - jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 gem "github-pages", group: :jekyll_plugins
 
