--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-themes-slate #minima
+#theme: jekyll-themes-slate #minima
 #remote_theme: pages-themes/slate@v0.2.0
 #plugins:
 #  - jekyll-remote-theme
