--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,17 +30,11 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: jekyll-themes-slate #minima
-#remote_theme: pages-themes/slate@v0.2.0
-#plugins:
-#  - jekyll-remote-theme
-#  - jekyll-feed
-
-remote_theme: pages-themes/slate@v0.2.0
+theme: minima
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
 
-gem "github-pages", group: :jekyll_plugins
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
