--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,6 +7,13 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
+
+## TESTING MMISTAKES
+source "https://rubygems.org"
+
+gem "github-pages", group: :jekyll_plugins
+gem "jekyll-include-cache", group: :jekyll_plugins
+
 # gem "jekyll", "~> 4.3.4"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 gem "minima", "~> 2.5"
@@ -14,7 +21,10 @@ gem "minima", "~> 2.5"
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 # gem "github-pages", group: :jekyll_plugins
 #gem "github-pages", "-> 232", group: :jekyll_plugins
-gem 'github-pages', '~> 232'
+
+
+
+#gem 'github-pages', '~> 232'
 
 # If you have any plugins, put them here!
 group :jekyll_plugins do
