--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,16 +14,12 @@
 #
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
 title: Sebastian Duchene - Research site
 email: sduchene@unimelb.edu.au
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Description of site
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -31,9 +27,11 @@ github_username:  jekyll
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
+#remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 
+plugins:
+#  - jekyll-feed
+  - jekyll-include-cache
 
 
 # Exclude from processing.
