test header image

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,13 +17,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sebastian Duchene - Research site
+title: Sebastian Duchene - Infectious disease genomics
 email: sduchene@unimelb.edu.au
-description: Description of site
+description: ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: sebduchene
+github_username:  sebastianduchene
+
+
 
 # Build settings
 theme: minima
