--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,6 +11,8 @@ source "https://rubygems.org"
 ## TESTING MMISTAKES
 source "https://rubygems.org"
 
+#gem "bulma-clean-theme",  '1.0.0' # Added for Bulma
+
 gem "github-pages", group: :jekyll_plugins
 gem "jekyll-include-cache", group: :jekyll_plugins
 
