--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,6 +34,9 @@ header_pages:
 
 # Build settings
 theme: minima
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
 #theme: bulma-clean-theme
 #remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
 #remote_theme: "mmistakes/minimal-mistakes@4.26.2"
